--- a/ch11-proposed.tex
+++ b/ch11-proposed.tex
@@ -233,7 +233,7 @@ and this is deemed in collision.
 Which path should we consider next (e.g $\pi_a$ or $\pi_b$)?
 
 What is our model for $P_{\mbox{\scriptsize free}}(\pi)$?
-Radial basis functions.
+Relate to GPs for classification\cite{rasmussen2006gpml}.
 
 We are operating under assumptions:
 \begin{itemize}
@@ -416,7 +416,7 @@ including:
    \citep{dellin2014drc},
    based on the Constrained Bi-Directional RRT
    \cite{berenson2009manifolds}.
-\item Otpher hybrid symbolic/geometric planners.
+\item Other hybrid symbolic/geometric planners.
    \cdnote{Talk to Evan.}
 \end{itemize}
 For a fair comparison,
