--- a/proposal.tex
+++ b/proposal.tex
@@ -30,7 +30,7 @@
 \usepackage{setspace}
 
 \floatstyle{plain}
-\newfloat{genericfloat}{t}{gflt}
+\newfloat{genericfloat}{h}{gflt}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows,backgrounds,calc,patterns,positioning,shapes,decorations.pathmorphing}
